# witchcraft

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  createdocs.py  downloadweights.py  index.cjs  install.cjs  nfcorpus-score.sh  package.json  requirements.txt
.cargo/: config.toml
assets/: LICENSE.txt
crates/chromium-idb/: Cargo.toml
crates/chromium-idb/src/: lib.rs  main.rs  v8.rs
examples/pickbrain/: claude_code.rs  codex.rs  main.rs  pi.rs  slack.rs  watermark.rs
extensions/pickbrain-pi/: index.ts
fbgemm-rs/: Cargo.toml  LICENSE
fbgemm-rs/src/: bf16.rs  gemm.rs  lib.rs  pack.rs  partition.rs
fbgemm-rs/src/kernels/: avx2.rs  avx2_bf16.rs  fallback.rs  mod.rs  neon.rs  neon_bf16.rs
fbgemm-rs/src/quantized/: avx2.rs  gemm.rs  mod.rs  neon.rs  pack.rs
fbgemm-rs/tests/: bf16_gemm.rs  sgemm.rs
skills/pickbrain/: SKILL.md
skills/pickbrain-codex/: SKILL.md
skills/pickbrain-pi/: SKILL.md
src/: assets.rs  db.rs  embedder.rs  fast_ops.rs  fused_matmul.rs  lib.rs  main.rs  merger.rs  napi.rs  openvino_t5.rs  packops.rs  priority.rs  quantized_t5.rs  sql_generator.rs  t5.rs  tests.rs  warp.rs
src/warp/: db.rs  packops.rs  sql_generator.rs  tests.rs  types.rs
tools/: compare-spotlight-warp.sh  spotlight-nfcorpus.py
tools/compare-backends/: Cargo.toml
tools/ov-stress/: Cargo.toml
tools/ov-stress/src/: main.rs
tools/t5-bench/: Cargo.toml
tools/t5-bench/src/: avx_q4k.rs  fused_matmul.rs  main.rs  quantized_t5.rs
ts/: index.ts  warp.cjs
