[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[[bin]]                         # !Dash
name = "warp-cli"               # !Dash
path = "src/main.rs"            # !Dash

[[bin]]                         # !Dash
name = "quantize-tool"          # !Dash
path = "src/quantize-tool.rs"   # !Dash

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
candle-metal-kernels = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2", optional=true }
metal = { version = "0.27.0", features = ["mps"], optional = true }
ug-metal = { version = "0.4.0", optional = true }
libc = { version = "0.2.147", optional = true }
anyhow = "*"
serde = "*"
serde_json = "*"

candle-core = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }

tokenizers = "*"
serde_plain = "1.0.2"
rand = "0.9.1"
sha2 = "0.10.9"
indicatif = { version = "0.17.11", optional = true }

csv = "1.3.1"
tempfile = "3.20.0"

napi = { version = "3.2.2", optional = true }
napi-derive = { version = "3.2.2", optional = true }
once_cell = "1.21.3"
zstd = "0.13.3"
lru = "0.16.0"
tracing = "0.1.41"
safetensors = "0.6.2"
uuid = {version = "1.18.1", features = ["v5"] }
iso8601-timestamp = "0.3.3"
log = "0.4.28"
text-splitter = "0.28.0" # !Dash
lz4_flex = "0.11.5"
strsim = "0.11.1"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "color"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2", features = ["metal"] }

[build-dependencies]
napi-build = "2.2.3"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
embed-assets = []
progress = ["dep:indicatif"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled"]
