[package]
name = "witchcraft"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"

[workspace]                     # !Dash
members = ["tools/quantize-tool", "tools/t5-bench", "tools/ov-stress", "tools/compare-backends", "crates/chromium-idb"] # !Dash

[[bin]]                         # !Dash
name = "warp-cli"               # !Dash
path = "src/main.rs"            # !Dash

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
openvino = { version = "0.10.0", features = ["runtime-linking"], optional = true }
anyhow = "*"
serde = "*"
serde_json = "*"

candle-core = { git = "https://github.com/huggingface/candle", rev="5bd5618" }
candle-nn = { git = "https://github.com/huggingface/candle", rev="5bd5618" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev="5bd5618" }

tokenizers = "*"
serde_plain = "1.0.2"
rand = "0.10.1"
sha2 = "0.11.0"
indicatif = { version = "0.18.4", optional = true }

csv = "1.3.1"
tempfile = "3.20.0"

napi = { version = "3.2.2", optional = true }
napi-derive = { version = "3.2.2", optional = true }
once_cell = "1.21.3"
lru = "0.18.0"
tracing = "0.1.41"
safetensors = "0.7.0"
uuid = {version = "1.18.1", features = ["v5"] }
iso8601-timestamp = "0.4.0"
log = "0.4.28"
text-splitter = { version = "0.30.1", features = ["markdown"] } # !Dash
regex = "1"                # !Dash
chrono = "0.4"             # !Dash
lz4_flex = "0.13.0"
strsim = "0.11.1"
rayon = { version = "1", optional = true }
fbgemm-rs = { path = "fbgemm-rs", optional = true, features = ["rayon"] }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "color"] }
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
chromium-idb = { path = "crates/chromium-idb" }

# Apple Silicon (ARM) - enable Metal support
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="5bd5618", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="5bd5618", features = ["metal"] }
candle-metal-kernels = { git = "https://github.com/huggingface/candle", rev="5bd5618", optional=true }
metal = { version = "0.33.0", features = ["mps"], optional = true }
ug-metal = { version = "0.5.0", optional = true }
libc = { version = "0.2.147", optional = true }

# Intel (x86_64) - no Metal support, use Accelerate only
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="5bd5618", features = [] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="5bd5618", features = [] }
libc = { version = "0.2.147", optional = true }

# Windows - priority management
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading"] }

[build-dependencies]
napi-build = "2.2.3"

[features]
#default = ["t5-quantized"]
#default = ["t5-openvino"]
napi = ["dep:napi", "dep:napi-derive"]
t5-quantized = []
t5-openvino = ["dep:openvino"]
embed-assets = []
progress = ["dep:indicatif"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
hybrid-dequant = ["dep:rayon"]
fbgemm = ["dep:fbgemm-rs"]
deterministic = []

[dependencies.rusqlite]
version = "0.39.0"
features = ["bundled"]
