[package]
name = "chromium-idb"
version = "0.1.0"
edition = "2021"
description = "Read Chrome/Electron IndexedDB (LevelDB with idb_cmp1 comparator) and dump to JSON"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "idb-dump"
path = "src/main.rs"

[dependencies]
rusty-leveldb = "4"
serde_json = "1"
snap = "1"
